--- a/newshadows/css/shadows.css
+++ b/newshadows/css/shadows.css
@@ -16,6 +16,15 @@ body {
   margin: 0 !important;
 }
 
+a, a:visited {
+  color: #C1272D;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #0f0000;
+}
+
 .center {
   text-align: center;
 }
@@ -64,6 +73,7 @@ body {
 
 .headerimage {
   display: inline-block;
+  position: relative;
 }
 
 .header-select {
@@ -88,7 +98,7 @@ body {
   line-height: 24px;
   color: #FFFFFF;
   font-size: 20px;
-  font-family: english, serif;
+  font-family: Georgia, serif;
   font-weight: 400;
   display: inline-block;
   white-space: nowrap;
@@ -101,7 +111,7 @@ body {
   color: #FFFFFF;
   font-size: 20px;
   text-align: center;
-  font-family: english, serif;
+  font-family: Georgia, serif;
   font-weight: 400;
 }
 
@@ -135,6 +145,13 @@ body {
 #headerwords {
   display: inline-block;
   max-height: 65px;
+}
+
+.titlewords {
+  position: absolute;
+    top: 20px;
+    left: 0;
+  height: 70px;
 }
 
 /******/
